<resources>
    <string name="app_name">EasyTrip</string>

    <string name="str_enter_name">name</string>
    <string name="str_password">password</string>
    <string name="str_enter">enter</string>

    <string name="str_where_do_you_want_to_go">Where do you want to go?</string>
    <string name="str_where">where?</string>
    <string name="str_when">when?</string>
    <string name="str_from">from?</string>
    <string name="str_till">till?</string>
    <string name="str_ok">ok</string>
    <string name="venue_row_rating">rating</string>

    <string name="str_venue_row_rating">Rating: </string>
    <string name="str_search">Search</string>

    <string name="venue_search_loading">Retrieving Venues</string>
    <string name="venue_search_loading_error">Error retreaving venues, please try again.</string>
    <string name="venue_search_empty_error">You must enter a search term.</string>
    <string name="venue_search_invalid_error">Could not find a place that matches the one entered, please try again.</string>

    <string name="no_inernet_connection">No internet connection, please try again later.</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="new_trip">New Trip</string>
    <string name="str_add">Add</string>
    <string name="str_e_mail_address">E-mail address</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_verify_password">verify password</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_remove">remove</string>
    <string name="str_name">name</string>
    <string name="str_birthday">birthday</string>
    <string name="str_select_departure_and_return_dates">Select departure and return dates</string>
    <string name="str_start_planing">Start planing!</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="more_details">More details...</string>
    <string name="show_map">Show map</string>
    <string name="show_list">Show list</string>
    <string name="data">date</string>
    <string name="view_trip">view trip</string>
    <string name="day">day</string>
    <string name="details">details</string>
    <string name="str_age">age</string>
    <string name="days">days</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="so_we_can_build_the_best_trip_for_you">So we can build the best trip for you.</string>
    <string name="what_s_your_first_name">What\'s your first name?</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="where_do_you_primarily_live">Where do you primarily live?</string>
    <string name="outdoors">Outdoors</string>
    <string name="gaming">Gaming</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
    <string name="wine">Wine</string>
    <string name="vegetarianism">Vegetarianism</string>
    <string name="vegan">Vegan</string>
    <string name="coffee">Coffee</string>
    <string name="working_out_wellness">Working Out Wellness</string>
    <string name="sports">Sports</string>
    <string name="art_design"><![CDATA[Art&Design]]></string>
    <string name="style">Style</string>
    <string name="religion">Religion</string>
    <string name="history_culture"><![CDATA[History&Culture]]></string>
    <string name="relaxation">Relaxation</string>
    <string name="luxury">Luxury</string>
    <string name="workingout_wellness"><![CDATA[WorkingOut&Wellness]]></string>
    <string name="choose_your_trip_topics">Choose your trip topics</string>
    <string name="nightLife">NightLife</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="family">Family</string>
    <string name="museums">Museums</string>
    <string name="sport">Sport</string>
    <string name="shopping">Shopping</string>
    <string name="restaurants">Restaurants</string>
    <string name="my_trip">My Trip</string>
    <string name="temp_text">temp text</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_trips">My Trips</string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="past">Past</string>
    <string name="scheduled">scheduled</string>
    <string name="trash">Trash</string>
    <string name="return_date">Return Date</string>
    <string name="favorite_topics">Favorite Topics</string>
    <string name="finish">Finish</string>
    <string name="select_start">Select Start Date</string>
    <string name="select_end">Select End Date</string>
    <string name="categories">Categories</string>
    <string name="destination">destination</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="filter">filter</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="date">Date</string>
    <string name="current">current</string>
    <string name="venues">Venues</string>

</resources>
