<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:weightSum="1"
    android:id="@+id/create_trip_rl"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_trip_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorGrey"
        android:minWidth="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="@string/new_trip"
        app:titleTextColor="@color/colorWhite">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/create_trip_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/create_trip_toolbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/shape2"
        android:padding="20dp">

        <EditText
            android:id="@+id/ed_where"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_where_do_you_want_to_go"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_departure_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/select_start"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_return_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/select_end"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:textSize="18dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/create_trip_ll"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/str_start_planing"
        android:textSize="20dp"
        android:textColor="@color/colorGrey"
        android:textStyle="bold" />

</RelativeLayout>