<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:weightSum="1"
    android:id="@+id/create_trip_rl"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/show_trip_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorGrey"
        android:minWidth="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="@string/my_trip"
        app:titleTextColor="@color/colorWhite">
    </android.support.v7.widget.Toolbar>

    <FrameLayout
    android:id="@+id/placeholder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/show_trip_tabs"
        android:layout_margin="10dp"
        android:background="@drawable/shape2">
    </FrameLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/show_trip_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/show_trip_toolbar"
        android:background="@color/colorGrey">

        <android.support.design.widget.TabItem
            android:id="@+id/show_list_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list" />

        <android.support.design.widget.TabItem
            android:id="@+id/show_map_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map" />

    </android.support.design.widget.TabLayout>

</RelativeLayout>
