<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/background"
    android:weightSum="1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_new_trip"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:background="@drawable/button"
        android:text="@string/new_trip"
        android:textColor="@android:color/background_light"
        android:textSize="24dp"
        android:textStyle="bold">
    </Button>


    <Button
        android:id="@+id/btn_profile"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/btn_new_trip"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/profile"
        android:textColor="@android:color/background_light"
        android:textSize="24dp"
        android:background="@drawable/button"
        android:textStyle="bold"  />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/btn_profile"
        android:layout_marginTop="60dp"
        android:text="@string/exit"
        android:textColor="@android:color/background_light"
        android:textSize="24dp"
        android:background="@drawable/button"
        android:textStyle="bold" />


</RelativeLayout>